--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Restore NuGet packages
+        run: nuget restore winPEAS.sln
+
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1
 
       - name: Build project
-        run: msbuild /p:Configuration=Release
+        run: msbuild winPEAS.sln /p:Configuration=Release
