--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,8 @@ jobs:
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1
 
+      - name: Move regexes
+        run:  cp -r D:\a\winpeas-github-actions\winpeas-github-actions\winPEAS\build_lists\ D:\a\build_lists
+
       - name: Build project
         run: msbuild winPEAS.sln /p:Configuration=Release
